--- a/cookie-crafter-frontend/src/components/infoIcon.css
+++ b/cookie-crafter-frontend/src/components/infoIcon.css
@@ -1,5 +1,12 @@
+.info-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+}
+
 .info-icon {
-  display: inline-block;
   width: 1rem;
   height: 1rem;
 }
