--- a/cookie-crafter-frontend/src/components/modal.css
+++ b/cookie-crafter-frontend/src/components/modal.css
@@ -14,6 +14,34 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  padding: 50px;
+  padding: 3.125rem;
   z-index: 1000;
+  border-radius: var(--radius);
+  background: linear-gradient(
+    45deg,
+    var(--light-brown) 0%,
+    var(--dark-yellow) 20%,
+    var(--yellow) 80%,
+    var(--light-yellow) 100%
+  );
+}
+
+.modal__close-button {
+  position: absolute;
+  top: 0.625rem;
+  right: 0.625rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+}
+
+.modal__close-button__icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+.modal__content {
+  line-height: 1.6;
 }
