Change gradient on button hover

--- a/cookie-crafter-frontend/src/components/createCookieForm.css
+++ b/cookie-crafter-frontend/src/components/createCookieForm.css
@@ -118,7 +118,12 @@
 }
 
 .create-cookie-form__button:hover {
-  background: linear-gradient(45deg, var(--yellow), var(--light-brown));
+  background: linear-gradient(
+    45deg,
+    var(--light-brown) 0%,
+    var(--dark-yellow) 80%,
+    var(--light-brown) 100%
+  );
 }
 
 .create-cookie-form__button:active {
