--- a/cookie-crafter-frontend/src/components/createCookieForm.css
+++ b/cookie-crafter-frontend/src/components/createCookieForm.css
@@ -5,16 +5,11 @@
 .create-cookie-form__container {
   /* Make container fullscreen and scrollable, to prevent body background scrolling */
   position: fixed;
-  overflow: scroll;
+  overflow: auto;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-
-  /* Hide scrollbar */
-  overflow-y: scroll;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
 
 #create-cookie-form {
@@ -26,13 +21,6 @@
   border-width: 0;
   border-radius: var(--radius);
   color: var(--light-yellow);
-}
-
-/* Hide scrollbar */
-.create-cookie-form__container::-webkit-scrollbar {
-  /* WebKit */
-  width: 0;
-  height: 0;
 }
 
 #create-cookie-form fieldset {
