--- a/cookie-crafter-frontend/src/components/modal.css
+++ b/cookie-crafter-frontend/src/components/modal.css
@@ -71,6 +71,14 @@
   line-height: 1.6;
 }
 
+.modal__content--centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+}
+
 .modal__content h2 {
   font-size: 1.5rem;
   font-weight: bold;
